[gd_scene load_steps=7 format=2]

[ext_resource path="res://Weapons/WeaponManager.gd" type="Script" id=1]
[ext_resource path="res://Weapons/Cannon.gd" type="Script" id=2]
[ext_resource path="res://Effects/shoot.wav" type="AudioStream" id=3]
[ext_resource path="res://Effects/reload.wav" type="AudioStream" id=4]
[ext_resource path="res://Weapons/Muzzleflash.tscn" type="PackedScene" id=5]

[sub_resource type="Animation" id=1]
resource_name = "Firing"
length = 0.2
loop = true
step = 0.01
tracks/0/type = "method"
tracks/0/path = NodePath(".")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"values": [ {
"args": [  ],
"method": "on_shot"
}, {
"args": [  ],
"method": "signal_fired"
} ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("ShotSound:playing")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("MuzzleFlashes:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0.01, 0.15 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}

[node name="WeaponManager" type="Spatial"]
script = ExtResource( 1 )
out_front = 27.0

[node name="Weapons" type="Spatial" parent="."]

[node name="Cannon" type="Spatial" parent="Weapons"]
script = ExtResource( 2 )
damage = 15.0
spread_angle = 0.091
unlimited_ammo = true
shots_per_clip = 30
crosshair_frame = 139

[node name="AnimationPlayer" type="AnimationPlayer" parent="Weapons/Cannon"]
anims/Firing = SubResource( 1 )

[node name="ShotSound" type="AudioStreamPlayer3D" parent="Weapons/Cannon"]
stream = ExtResource( 3 )

[node name="ReloadSound" type="AudioStreamPlayer3D" parent="Weapons/Cannon"]
stream = ExtResource( 4 )

[node name="ReloadTimer" type="Timer" parent="Weapons/Cannon"]
wait_time = 3.0
one_shot = true

[node name="MuzzleFlashes" type="Spatial" parent="Weapons/Cannon"]
visible = false

[node name="muzzleflash" parent="Weapons/Cannon/MuzzleFlashes" instance=ExtResource( 5 )]
transform = Transform( -4.43373, 0, -3.87609e-07, 0, 4.43373, 0, 3.87609e-07, 0, -4.43373, 1.96474, -1.10327, -1.43252 )

[node name="muzzleflash4" parent="Weapons/Cannon/MuzzleFlashes" instance=ExtResource( 5 )]
transform = Transform( -4.43373, 0, -3.87609e-07, 0, 4.43373, 0, 3.87609e-07, 0, -4.43373, -1.94791, -1.10327, -1.43252 )

[node name="muzzleflash2" parent="Weapons/Cannon/MuzzleFlashes" instance=ExtResource( 5 )]
transform = Transform( -4.43373, 0, -3.87609e-07, 0, 4.43373, 0, 3.87609e-07, 0, -4.43373, 4.87518, -1.10327, -1.43252 )

[node name="muzzleflash3" parent="Weapons/Cannon/MuzzleFlashes" instance=ExtResource( 5 )]
transform = Transform( -4.43373, 0, -3.87609e-07, 0, 4.43373, 0, 3.87609e-07, 0, -4.43373, -4.9059, -1.10327, -1.43252 )
